--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -31,14 +31,14 @@
             <TextView
                 android:id="@+id/potLuckItem"
                 android:textSize="22sp"
-                android:text="This is a test"
+                android:text="Item"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
 
                 android:id="@+id/potLuckName"
                 android:textSize="22sp"
-                android:text="Name"
+                android:text="Still need this item!"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
