--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,16 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_login"
+        android:orderInCategory="1"
+        android:title="Login / Register"
+        app:showAsAction="never"
+        android:visible="true"/>
+    <item
+        android:id="@+id/action_logout"
+        android:orderInCategory="2"
+        android:title="Log Out"
+        app:showAsAction="never"
+        android:visible="false"/>
 </menu>
